2023-03-26  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* calvin_dataset.py: Added PlayDataset for self-supervised experiments.

2023-03-20  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* pooling-experiments: Tried max/mean/last pooling for Transformer and LSTM:
	- Transformer-D: max > mean+1% > last+2%, c32 > c64 for max (.6%), c64 > c32 (.3%) for others
	- Transformer-ABCD: mean > last = max (1%), c32 > c64 for max (.5%), c64 > c32 (.6%) for others.
	- Transformer-ABC: did not converge.
	- LSTM-D: max > last+.2% > mean+2.5%. max64>max32 (1.5%), last64>last32 (.1%), mean32>mean64 (4%)
	- LSTM-ABCD: max > last+.1% > mean+.5%. max64>max32 (.5%), last32>last64 (1.5%), mean64>mean32 (.5%)
	- LSTM-ABC: did not converge. mean64 least bad (.8645).

2023-03-19  dyuret  <dyuret@login03.kuacc.ku.edu.tr>

	* TODO
	- transformer: try max pooling and cls
	- lstm: also can try max and mean pooling instead of the last step (instead of output_interval).
	-- output_interval not the same as instances_per_episode, may explain job_1 LSTM: either add it back, or find optima with output_interval=
	- transformer: look at the effect of positional encoding: does it help?
	- transformer: add nonlinearity at the input? at the output?
	- transformer: does the *sqrt(ndim) scaling at the input help?
	- calvindataset: integrate 2frame into calvindataset as an option: in fact do a general stride argument
	- calvindataset: create an option that will compute and use differences of n frames as features
	- calvindataset: create an option that will take a subset of instances for learning curve
	- Learning curve experiments.
	- SSL experiments
	- Auto-label experiments
	- finish mlp feature exp with abcd
	- rnn and transformer feature exp
	- deprecate loaddata.py
	- Inputs: try different representations (voxels & convolution?) (3-D positional encoding?) (read Palm-E)

	* Leaderboard: 
	job_id	val_acc	step	data	model	batch	lr	maxstp	hidden	layers	dropout	wdecay	nheads	ipe	context	features