@@ -43,9 +43,9 @@ class GPT(pl.LightningModule):
         self.src_mask = None
         layer = nn.TransformerEncoderLayer(self.hidden_size, self.num_heads, dim_feedforward=self.dim_feedforward, 
                                            dropout=self.dropout, batch_first=self.batch_first, norm_first=self.norm_first)
-        self.encoder = nn.Linear(self.input_size, self.hidden_size), # [B,T,X] => [B,T,H]; in word_language_model there is also a scaling *math.sqrt(hidden)?
-        self.pos_encoder = PositionalEncoding(self.hidden_size, dropout=self.dropout, batch_first=self.batch_first), # [B,T,H] => [B,T,H]
-        self.transformer = nn.TransformerEncoder(layer, self.num_layers, norm=self.norm), # [B,T,H] => [B,T,H]
+        self.encoder = nn.Linear(self.input_size, self.hidden_size) # [B,T,X] => [B,T,H]; in word_language_model there is also a scaling *math.sqrt(hidden)?
+        self.pos_encoder = PositionalEncoding(self.hidden_size, max_len=self.window, dropout=self.dropout, batch_first=self.batch_first) # [B,T,H] => [B,T,H]
+        self.transformer = nn.TransformerEncoder(layer, self.num_layers, norm=self.norm) # [B,T,H] => [B,T,H]
         self.decoder = nn.Linear(self.hidden_size, self.output_size)         # [B,T,H] => [B,T,Y]
         
     def forward(self, x, has_mask=True):       # (B,T,X) => (B,T,Y)
@@ -54,7 +54,7 @@ class GPT(pl.LightningModule):
         if has_mask:
             mask_size = x.shape[1] if self.batch_first else x.shape[0]
             if self.src_mask == None or self.src_mask.shape[0] != mask_size:
-                self.src_mask = nn.Transformer.generate_square_subsequent_mask(x.size(1)).to(x.device)
+                self.src_mask = nn.Transformer.generate_square_subsequent_mask(x.size(1), device=x.device).to(torch.bool)
             x = self.transformer(x, self.src_mask)
         else:
             x = self.transformer(x)
@@ -72,12 +72,12 @@ class GPT(pl.LightningModule):
         inputs, target, *_ = batch        # inputs=(B,T,X), target=(B,T,Y)
         self.val_loss.update(self(inputs), target)
 
-    def training_epoch_end(self, outputs):
+    def on_train_epoch_end(self):
         self.log("wnorm", torch.norm(torch.cat([p.view(-1) for p in self.parameters()])))
         self.log("trn_loss", self.trn_loss.compute())
         self.trn_loss.reset()
 
-    def validation_epoch_end(self, outputs):
+    def on_validation_epoch_end(self):
         val_loss = self.val_loss.compute()
         self.val_loss.reset()
         self.log("val_loss", val_loss)
@@ -86,10 +86,11 @@ class GPT(pl.LightningModule):
 
 
 # Given trn and val datasets and optional hyperparameters, train and return final val_loss
-def train(trn_set, val_set, batch_size=32, max_epochs=-1, max_steps=-1,
-          hidden_size=512, num_layers=1, num_heads=1, dim_feedforward=-1, batch_first=True, norm_first=False, norm=None, # transformer
+def train(trn_set, val_set, batch_size=32, max_epochs=-1, max_steps=-1, # trainer
+          hidden_size=512, num_layers=1, num_heads=1,                   # transformer
+          dim_feedforward=-1, batch_first=True, norm_first=False, norm=None, # transformer, usually left default
           dropout=0, weight_decay=0, learning_rate=0.0001, # optimizer
-          data="debug", in_features=[], out_features=[], window=0, # these are not used, just here for logging
+          data="", in_features=[], out_features=[], window=0, # these are not used, just here for logging
           **kwargs):
     global trainer, transformer, trn_loader, val_loader #DBG
     if kwargs:
@@ -103,10 +104,11 @@ def train(trn_set, val_set, batch_size=32, max_epochs=-1, max_steps=-1,
                       batch_first=batch_first, norm_first=norm_first, norm=norm, # transformer
                       dropout=dropout, weight_decay=weight_decay, learning_rate=learning_rate, # optimizer
                       data=data, in_features=in_features, out_features=out_features, window=window) # these are not used by the model, just here for logging
+    transformer_compiled = torch.compile(transformer)
     trn_loader = DataLoader(trn_set, batch_size, shuffle=True)
     val_loader = DataLoader(val_set, batch_size, shuffle=False)
     checkpoint_callback = ModelCheckpoint(monitor = "val_loss", mode = 'min')
     torch.set_float32_matmul_precision('medium')
     trainer = pl.Trainer(accelerator='gpu', devices=1, max_epochs=max_epochs, max_steps=max_steps, callbacks=[checkpoint_callback])
-    trainer.fit(transformer, trn_loader, val_loader)
+    trainer.fit(transformer_compiled, trn_loader, val_loader)
     return transformer.hp_metric.compute().item()
