@@ -1,3 +1,9 @@
+2023-03-29  dyuret  <dyuret@login03.kuacc.ku.edu.tr>
+
+	* gpt.py:
+	tcp+0,act+0=>tcp+1: min rmsd=0.0422, converges to < 0.05 in 500 steps. {'batch_size': 32, 'max_steps': 100000, 'hidden_size': 512, 'num_layers': 2, 'num_heads': 2, 'dropout': 0, 'weight_decay': 0, 'learning_rate': 0.0001, 'data': 'D'}{'in_features': [('tcp', 0), ('act', 0)], 'out_features': [('tcp', 1)], 'window': 1024}
+	tcp+0,rel+0=>tcp+1: min rmsd=0.0422, converges to
+
 2023-03-26  dyuret  <dyuret@login03.kuacc.ku.edu.tr>
 
 	* calvin_dataset.py: Added PlayDataset for self-supervised experiments.
